Updates for live website

--- a/src/templates/sassy.html
+++ b/src/templates/sassy.html
@@ -89,7 +89,7 @@
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
-        <a href="/sassy/bot" class="btn btn-lg btn-outline-danger btn-block"><small>SASSyBot</small></a>
+        <a href="/sassy/cron" class="btn btn-lg btn-outline-danger btn-block"><small>SASSyCron</small></a>
       </div>
       <div class="col-md-1"></div>
     </div>
