Added interface for MMT

--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -327,8 +327,8 @@
               <th><font color="grey"> </font></th>
               <th><font color="grey">link</font></th>
               <th><font color="grey">link</font></th>
-              <th><font color="grey">Observe<font></th>
-              <th><font color="grey">Observe<font></th>
+              <th><font color="grey">Observe</font></th>
+              <th><font color="grey">Observe</font></th>
             </tr>
           </thead>
           <tbody>
