--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -426,8 +426,8 @@
                {% endif %}
                <td><a href="https://alerce.online/object/{{ alert.zoid }}/" title="{{ alert.zoid }}" class="btn btn-outline-success btn-small">{{ alert.zoid }}</a></td>
                <td><a href="https://lasair.roe.ac.uk/object/{{ alert.zoid }}/" title="{{ alert.zoid }}" class="btn btn-outline-success btn-small">{{ alert.zoid }}</a></td>
-               <td><a href="{{ url_for('mmt_binospec_longslit', zoid=alert.zoid) }}" title="BinoSpecLongslit_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Spectrum</a></td>
-               <td><a href="{{ url_for('mmt_binospec_imaging', zoid=alert.zoid) }}" title="BinoSpecImaging_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Image</a></td>
+               <td><a href="{{ url_for('mmt_longslit', zoid=alert.zoid) }}" title="Longslit_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Spectrum</a></td>
+               <td><a href="{{ url_for('mmt_imaging', zoid=alert.zoid) }}" title="Imaging_{{ alert.zoid }}" class="btn btn-outline-info btn-small">Image</a></td>
               </tr>
             {% endfor %}
           </tbody>
