--- a/src/templates/mmt_request.html
+++ b/src/templates/mmt_request.html
@@ -24,7 +24,7 @@
   <div class="col-md-12">
    <div class="d-flex justify-content-between">
     <div class="row">
-     <a href="{{ url_for('mmt_request') }}" class="btn btn-md btn-primary">Confirm</a>
+	    <a href="{{ url_for('mmt_request') }}?payload={{ payload }}" class="btn btn-md btn-primary">Confirm</a>
     </div>
     <div>
      <a href="{{ url_for('cron_records') }}" class="btn btn-md btn-danger">Cancel</a>
