Formal release of SassyCron

--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -10,12 +10,12 @@
   <div class="row">
     <div class="col-md-12">
       <h2>SassyCron</h2>
-      <br><h5><font color="grey">This cron job runs every hour and asks the question: How many alerts within the
+      <br><h5><font color="grey">This cron job runs every hour and answers the question: How many alerts within the
       past 24 hours (from now), with a real/bogus score &gt; 0.5, have a host in the GLADE catalog within the
       circumscribed circle of the ZTF cutout FoV (45&Prime;) at a distance of &lt; 500 Mpc that are <i>not</i> in the TNS
       database and are <i>not</i> known solar system objects? For each such candidate, we then query the
       <a href="https://alerce.online">Alerce</a> database to obtain a classifier and produce images of the cutouts.
-      The table is explorable using the standard SASSy controls on the left.<br>
+      The table is explorable using the standard SASSy controls on the left.<br><br>
       The data below includes the period {{ iso_min }} through {{ iso_max }}.</font></h5>
       <br><br>
     </div>
