--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,8 +12,10 @@
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
  <!-- favicon ico -->
- <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/favicon64.ico') }}">
- <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon16.ico') }}">
+ <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+ <!-- <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/favicon64.ico') }}"> -->
+ <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon16.ico') }}"> -->
+ <!-- <link rel="shortcut icon" href="/static/img/favicon16.ico"> --> 
  <!-- title -->
  <title>SASSy - Steward Observatory</title>
  {% block css %}
