Added Mollweide projection to SassyCron

--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -22,6 +22,14 @@
   </div>
   <!-- end of introduction -->
 
+  <!-- mollweide -->
+  <div class="row">
+    <div class="col-md-12">
+      <center><img src="{{ url_for('static', filename='/img/sassy_cron_mollweide.png') }}" title="/static/img/sassy_cron_mollweide.png"></center>
+    </div>
+  </div>
+  <!-- end of mollweide -->
+
   <div class="row">
 
     <!-- sort section -->
